--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Aug 29 16:30:49 IST 2023
-sdk.dir=E\:\\StudioSDK
+sdk.dir=C\:\\Users\\Mitul\\AppData\\Local\\Android\\Sdk
